<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoteBook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="text">文本</string>
    <string name="image">图片</string>
    <string name="video">视频</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="drawer_title">插入文本、图片、视频</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="c_edit">有了记事本，我再也不会忘记事情了！</string>
    <string name="save">保存</string>
    
    

</resources>